--- a/index.ipynb
+++ b/index.ipynb
@@ -187,21 +187,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-8-df2bfdabd6e9>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-df2bfdabd6e9>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(countries[index])\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Croatia\n",
+      "1\n",
+      "USA\n",
+      "2\n",
+      "Argentina\n",
+      "3\n",
+      "France\n",
+      "4\n",
+      "Brazil\n",
+      "5\n",
+      "Japan\n",
+      "6\n",
+      "Vietnam\n",
+      "7\n",
+      "Israel\n"
      ]
     }
    ],
    "source": [
-    "#for index in [0,1,2,3,4,5,6,7]:\n",
-    "    #print(index)\n",
+    "for index in [0,1,2,3,4,5,6,7]:\n",
+    "    print(index)\n",
     "    print(countries[index])"
    ]
   },
