--- a/index.ipynb
+++ b/index.ipynb
@@ -420,7 +420,7 @@
     }
    ],
    "source": [
-    "for index in list(range(0, len(citi))):\n",
+    "for index in list(range(0, len(cities))):\n",
     "    print(cities[index]+\",\", countries[index])"
    ]
   },
