--- a/index.ipynb
+++ b/index.ipynb
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
     "    if key == \"last_name\":\n",
     "        last_name = value\n",
     "    if key == \"first_name\":\n",
-    "        first_name = value\n",
+    "        first_name = value.title()\n",
     "print(first_name, last_name)"
    ]
   },
