--- a/index.ipynb
+++ b/index.ipynb
@@ -575,14 +575,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Terrance KOAR\n"
+      "Terrance Koar\n"
      ]
     }
    ],
@@ -591,9 +591,9 @@
     "last_name = \"\"\n",
     "for key, value in example_dictionary.items():\n",
     "    if key == \"last_name\":\n",
-    "        last_name = value\n",
+    "        last_name = value.title()\n",
     "    if key == \"first_name\":\n",
-    "        first_name = value.title()\n",
+    "        first_name = value\n",
     "print(first_name, last_name)"
    ]
   },
